[tool.poetry]
name = "my-tools"
version = "0.1.0"
description = "Tools to simplify daily life."
authors = ["Anik"]
readme = "README.md"
packages = [{include = "my_tools"}]

[tool.poetry.dependencies]
python = "^3.10.5"
fastapi = "0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
black = "^23.1.0"
pylint = "^2.16.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
